--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 .App {
   text-align: center;
 }
@@ -39,4 +35,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+main {
+  min-height: calc(100vh - 120px);
 }
